[package]
name = "henx"
version = "0.1.0"
edition = "2021"

[dependencies]
scap = { path = "../scap"}
anyhow = "1.0"

[target.'cfg(target_os = "macos")'.dependencies]
swift-rs = "1.0.5"

[target.'cfg(target_os = "macos")'.build-dependencies]
swift-rs = { version = "1.0.5", features = ["build"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows-capture = { git = "https://github.com/NiiightmareXD/windows-capture", branch="main" }
